--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">News</string>
 
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="account_type">guo.com</string>
+    <string name="account_name" >dummyAccount</string>
+    <string name="news_provider_authority">com.guo.news</string>
 </resources>
