--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,38 @@
     <string name="account_name">dummyAccount</string>
     <string name="news_provider_authority">com.guo.news</string>
     <string name="transition_content_image">contentImage</string>
+    <string name="title_activity_settings">Settings</string>
+
+    <!-- Strings related to Settings -->
+
+    <!-- Example General settings -->
+    <string name="pref_header_general">General</string>
+
+    <string name="pref_title_social_recommendations">Enable social recommendations</string>
+    <string name="pref_description_social_recommendations">Recommendations for people to contact
+        based on your message history
+    </string>
+
+    <string name="pref_title_display_name">Display name</string>
+    <string name="pref_default_display_name">John Smith</string>
+
+
+
+    <string name="pref_title_sync_frequency">Sync frequency</string>
+    <string name="pref_sync_frequency_key">sync_frequency</string>
+    <string name="pref_sync_frequency_default">3 hours</string>
+    <string-array name="pref_sync_frequency_titles">
+        <item>1 minute</item>
+        <item>30 minutes</item>
+        <item>1 hour</item>
+        <item>3 hours</item>
+        <item>6 hours</item>
+    </string-array>
+    <string-array name="pref_sync_frequency_values">
+        <item>1</item>
+        <item>60</item>
+        <item>180</item>
+        <item>360</item>
+    </string-array>
+
 </resources>
