--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,7 +24,7 @@
 
     <string name="pref_title_sync_frequency">Sync frequency</string>
     <string name="pref_sync_frequency_key">sync_frequency</string>
-    <string name="pref_sync_frequency_default">3 hours</string>
+    <string name="pref_sync_frequency_default">180</string>
     <string-array name="pref_sync_frequency_titles">
         <item>1 minute</item>
         <item>30 minutes</item>
