--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     </string-array>
     <string-array name="pref_sync_frequency_values">
         <item>1</item>
+        <item>30</item>
         <item>60</item>
         <item>180</item>
         <item>360</item>
